--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-</body> <h1>vai ser uma imagem aqui
-    
-</h1>
+</body> <h1>vai ser uma imagem aqui</h1>
+<li>Pedro Schneider </li>
 </html>
+<li>covatti</li>
