--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+<header>
+    <img src="image.png" alt="impilhadeira">
+    <ul><li>escola</li></ul>
+    <li>estudante</li>
+</header class= (cabecalho)>
+<img class="cabecalho-lista">
+<li> class</li>
 </body> <h1>vai ser uma imagem aqui</h1>
 <li>Pedro Schneider </li>
 </html>
